# Catalog_DjPr

./: .env.example  README.md  blog_data.json  data.json  pyproject.toml
catalog/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  utils.py  views.py
catalog/migrations/: 0004_rename_version_sign_version_is_current.py  0005_alter_version_options_version_unique_product_version.py  0006_product_owner.py  0007_alter_product_options.py
catalog/templates/catalog/: product_confirm_delete.html  product_details.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  urls.py  views.py
users/management/commands/: create_moderator.py  csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html  user_profile_detail.html  user_profile_form.html
